Allow TCPDF to draw page headers and footers based on new tcpdf output- section defined in the project config file

--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -302,4 +302,61 @@ ReporticoApp::setConfig('output_sections', array (
                 ),
 
         ));
+
+ReporticoApp::setConfig('output_sections_tcpdf', array (
+
+        'page-header-block' => array (
+                array ( 
+                        'content' => '{REPORT_TITLE}', 
+                        'styles' => 'border-width: 0px 0px 1px 0px; margin: 0px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:0px 0px 0px 0px; background-color: #000; color: #fff; margin-left: 0%;margin-bottom: 20px;text-align:center' 
+                      ),
+                ),
+
+        'page-footer-block' => array (
+                array ( 
+                        'content' => 'Page: {PAGE}', 
+                        'styles' => 'border-width: 1 0 0 0; margin: 40 0 0 0; font-style: italic' 
+                      ),
+                array ( 
+                        'content' => 'Time: date(\'Y-m-d H:i:s\')', 
+                        'styles' => 'font-size: 8pt; text-align: right; font-style: italic; margin-top: 30px;' 
+                      ),
+                ),
+
+        'page-title-block' => array (
+                array ( 
+                        'content' => '{REPORT_TITLE}', 
+                        'styles' => 'border-width: 1 0 0 0; top: 0px; font-size: 8pt; margin: 2px 0px 0px 0px; font-style: italic;' ,
+                        'template' => '<h1>' 
+                      ),
+            ),
+
+        'styles' => array ( 
+
+            'body' => array(
+                'style' => array(
+                    "border-width" => "1px 1px 1px 1px",
+                    "border-style" => "none",
+                    "border-color" => "#333333",
+                    "font-size" => "8pt",
+                    "font-family" => "freesans",
+                    "padding" => "20px 20px 20px 20px"
+                )
+             ),
+
+            'criteria' => array(
+                'style' => array(
+                    "font-size" => "8pt",
+                    "background-color" => "#eeeeee",
+                    "border-style" => "solid",
+                    "border-width" => "1px 1px 1px 1px",
+                    "border-color" => "#888888",
+                    "margin" => "0px 5px 10px 5px",
+                    "padding" => "0px 5px 0px 5px",
+                    "display" => "none",
+                )
+             ),
+
+        )));
+
 ?>
