--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -274,7 +274,11 @@ ReporticoApp::setConfig('output_sections', array (
         'page-header-block' => array (
                 array ( 
                         'content' => '{REPORT_TITLE}', 
-                        'styles' => 'border-width: 0px 0px 1px 0px; margin: 15px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:0px 0px 0px 0px; width: 100%; background-color: inherit; color: #000; margin-left: 0%;margin-bottom: 20px;text-align:center' 
+                        'styles' => 'border-width: 0px 0px 1px 0px; margin: 25px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:0px 0px 0px 0px; width: 100%; background-color: inherit; color: #000; margin-left: 0%;margin-bottom: 20px;text-align:center' 
+                      ),
+                array ( 
+                        'content' => '', 
+                        'styles' => 'width: 100; height: 50; margin: 5px 0 0 0; background-image:assets/images/reportico100.png' 
                       ),
                 ),
 
@@ -308,7 +312,11 @@ ReporticoApp::setConfig('output_sections_tcpdf', array (
         'page-header-block' => array (
                 array ( 
                         'content' => '{REPORT_TITLE}', 
-                        'styles' => 'border-width: 0px 0px 1px 0px; margin: 0px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:0px 0px 0px 0px; background-color: #000; color: #fff; margin-left: 0%;margin-bottom: 20px;text-align:center' 
+                        'styles' => 'border-width: 0px 0px 1px 0px; margin: 50px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:0px 0px 0px 0px; back1ground-color: #f00; color: #000; margin-left: 0%;margin-bottom: 0px;text-align:center' 
+                      ),
+                array ( 
+                        'content' => '', 
+                        'styles' => 'width: 100px; height: 50px; margin: 8px 0px 0px 0px; background-image:'.__DIR__.'/../../assets/images/reportico100.png' 
                       ),
                 ),
 
