--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -277,10 +277,10 @@ ReporticoApp::setConfig('output_sections', array (
                         'styles' => 'border-width: 0px 0px 1px 0px; margin: 25px 0px 0px 0px; border-color: #000000; font-size: 18; border-style: solid;padding:0px 0px 0px 0px; width: 100%; background-color: inherit; color: #000; margin-left: 0%;margin-bottom: 20px;text-align:center' 
                       ),
                 // Set an HTML logo
-                array ( 
+                //array ( 
                         //'content' => '<img src="http://reportico.org/site2/themes/reportico-site/assets/images/logo.png" style="height:50px;width: 50px">', 
                         //'styles' => 'width: 50px; height: 50px; margin: 5px 0 0 0; background-image:http://reportico.org/site2/themes/reportico-site/assets/images/logo.png' 
-                      ),
+                      //),
                 ),
 
         'page-footer-block' => array (
