--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -308,25 +308,25 @@ ReporticoApp::setConfig('output_sections', array (
 
         'styles' => array ( 
 
-            'body' => array(
-                'style' => array(
-                    "border-width" => "1px 1px 1px 1px",
-                    "border-style" => "none",
-                    "border-color" => "#333333",
-                    "font-size" => "14pt",
-                    "padding" => "20px 20px 20px 20px"
-                )
-             ),
+            //'body' => array(
+            //    'style' => array(
+            //        "border-width" => "1px 1px 1px 1px",
+            //        "border-style" => "none",
+            //        "border-color" => "#333333",
+            //        "font-size" => "14pt",
+            //        "padding" => "20px 20px 20px 20px"
+            //    )
+            // ),
 
             'page' => array(
                 'style' => array(
                     "border-width" => "1px 1px 1px 1px",
                     "border-style" => "solid",
-                    "border-color" => "#333333",
+                    "border-color" => "#d0ccc9",
                     //"font-size" => "10pt",
                     "padding" => "20px 20px 20px 20px"
                 )
-             ),
+            ),
 
             'criteria' => array(
                 'style' => array(
@@ -400,7 +400,7 @@ ReporticoApp::setConfig('output_sections_tcpdf', array (
                 'style' => array(
                     "border-width" => "1px 1px 1px 1px",
                     "border-style" => "none",
-                    "border-color" => "#333333",
+                    "border-color" => "#d0ccc9",
                     //"font-size" => "8pt",
                     //"font-family" => "freesans",
                     "padding" => "20px 20px 20px 20px"
