--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "reportico/php-phantomjs": "^4.6",
         "tecnickcom/tcpdf": "^6.2",
         "szymach/c-pchart": "^3.0",
-        "reportico/assetter": "^1",
+        "requtize/assetter": "^1",
         "foxy/foxy": "^1.0.0"
     },
      "autoload": {
