--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "tecnickcom/tcpdf": "^6.2",
         "szymach/c-pchart": "^3.0",
         "requtize/assetter": "^1",
-        "foxy/foxy": "^1.0.0"
+        "foxy/foxy": "^1.0.0",
+        "chrome-php/chrome": "^0.6.0"
     },
      "autoload": {
         "psr-4": {
