--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "reportico/php-phantomjs": "^4.6",
         "tecnickcom/tcpdf": "^6.2",
         "szymach/c-pchart": "^3.0",
-        "reportico/assetter": "^1"
+        "reportico/assetter": "^1",
+        "spatie/browsershot": "^3.29"
     },
      "autoload": {
         "psr-4": {
