--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.4.0",
         "adodb/adodb-php": "^5.20",
-        "twig/twig": "~1.16",
+        "twig/twig": "^3.0",
         "tecnickcom/tcpdf": "^6.2",
         "szymach/c-pchart": "^3.0",
         "reportico/assetter": "^1",
